--- a/dxapp.json
+++ b/dxapp.json
@@ -1,9 +1,9 @@
 {
-  "name": "FH_PRS_v1.0",
-  "title": "FH PRS v1.0",
-  "summary": "v1.0 - FH polygenic risk score calculation.",
+  "name": "FH_PRS_v1.0.1",
+  "title": "FH PRS v1.0.1",
+  "summary": "v1.0.1 - FH polygenic risk score calculation.",
   "properties": {
-    "github release": "v1.0"
+    "github release": "v1.0.1"
   },
   "dxapi": "1.0.0",
   "inputSpec": [
@@ -58,7 +58,7 @@
     "execDepends": [
     {
     "name": "tabix", 
-    "package_manager": "apt"
+    "version": "1.10.2-3"
     }
   ]
 },
@@ -74,7 +74,7 @@
     "aws:us-east-1": {
       "systemRequirements": {
         "main": {
-          "instanceType": "mem1_ssd1_x2"
+          "instanceType": "mem1_ssd1_v2_x2"
         }
       }
     }
