added timeout script to dxapp.json according to Rachel's code put in issue

--- a/dxapp.json
+++ b/dxapp.json
@@ -42,6 +42,19 @@
     }
   ],
   "runSpec": {
+    "executionPolicy": {
+      "restartOn": {
+      | "JobTimeoutExceeded": 1,
+        "JMInternalError": 1,
+        "UnresponsiveWorker": 2,
+        "ExecutionError": 1
+      }
+    },
+    "timeoutPolicy": {
+      "*": {
+        "hours": 6
+      }
+    },
     "interpreter": "bash",
     "execDepends": [
       {
