--- a/dxapp.json
+++ b/dxapp.json
@@ -1,9 +1,9 @@
 {
-  "name": "FH_PRS_v1.0.2",
-  "title": "FH PRS v1.0.2",
-  "summary": "v1.0.2 - FH polygenic risk score calculation.",
+  "name": "FH_PRS_v1.0.3",
+  "title": "FH PRS v1.0.3",
+  "summary": "v1.0.3 - FH polygenic risk score calculation.",
   "properties": {
-    "github release": "v1.0.2"
+    "github release": "v1.0.3"
   },
   "dxapi": "1.0.0",
   "inputSpec": [
@@ -71,7 +71,7 @@
   },
   "ignoreReuse": false,
   "regionalOptions": {
-    "aws:us-east-1": {
+    "aws:eu-west-2-g": {
       "systemRequirements": {
         "main": {
           "instanceType": "mem1_ssd1_v2_x2"
